<resources>
    <string name="app_name">VariantMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_app">Вариант маркетга хуш келибсиз</string>
    <string name="mainPage">Асосий ойна</string>
    <string name="category">Бўлимлар</string>
    <string name="orders">Буюртмалар</string>
    <string name="profil">Профиль</string>
    <string name="search">Қидириш...</string>
    <string name="viewAll">Ҳаммасини кўриш</string>
    <string name="get_product">Ҳозир сотиб олиш</string>
    <string name="deal_day">Чегирмалар</string>
    <string name="new_product">Энг янги маҳсулотлар</string>
    <string name="search_cat">Қидириш бўлими</string>
    <string name="search_data">Топилган Малумотлар 1000 та</string>
    <string name="filter">Фильтр</string>
    <string name="sort">Саралаш</string>
    <string name="clear">Тозалаш</string>
    <string name="buy_product">Сотиб олиш</string>
    <string name="comment_product">Фикир қолдириш</string>
    <string name="comment">Фикир қолдириш</string>
    <string name="month">Муддати:</string>
    <string name="credit">12 oy</string>
    <string name="name">Исм</string>
    <string name="email">Эмаил</string>
    <string name="phone_number">Телефон рақам</string>
    <string name="location">Жойлашган жойи</string>
    <string name="gender">Жинси</string>
    <string name="man">Эркак</string>
    <string name="woman">Аёл</string>
    <string name="edit_profile">Малумотларни ўзгартиришингиз мумкин</string>
    <string name="cancel">Бекор қилиш</string>
    <string name="edit">Ўзгартириш</string>
    <string name="addCard">Карта қўшиш</string>
    <string name="create_card">Карта яратиш</string>
    <string name="favorites">Севимлилар</string>
    <string name="faqs">Кўп сўраладиган саволлар</string>
    <string name="conditions">Фойдаланиш шартлари</string>
    <string name="address">Манзил</string>
    <string name="logout">Аккоунтдан чиқиш</string>
    <string name="blance">Баланс:</string>
    <string name="add_card_bank">Карта қўшиши</string>
    <string name="edit_card_data">Малумотларни ўзгартириш</string>
    <string name="delete_card_bank">Картани ўчириш</string>
    <string name="no_balance">Карта мавжуд эмас.</string>
    <string name="no_money_history">Тўовлар тарихи мавжуд эмас</string>
    <string name="card_number">Карта рақами</string>
    <string name="date_card">Амал қилиш муддати</string>
    <string name="name_card">Карта номини киритинг</string>
    <string name="humo">Ҳумо</string>
    <string name="uzcard">Узсард</string>
    <string name="card_user_name">Картадаги Исм Фамилия</string>
    <string name="bank_name">Банк номи</string>
    <string name="save">Сақлаш</string>
    <string name="history_money_card">Тўловлар тарихи</string>
    <string name="delivery">Етказиб бериш</string>
    <string name="month_summa_new_hint">Ойлик тўлов:</string>
    <string name="product_summa_hint">Тан нархи:</string>
    <string name="questions">Кўп сўраладиган саволлар</string>
    <string name="terms">Фойдаланиш шарти</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Паролни унутдингизми?</string>
    <string name="login">Кириш</string>
    <string name="login_text">Логин орқали кириш</string>
    <string name="registration_tv">Рўйхатдан ўтиш</string>
    <string name="register_text">Рўйхатдан ўтиш</string>
    <string name="password_confirm">Паролни қайта киритинг</string>
    <string name="full_name">Тўлиқ ишм фамилиянгиз</string>
    <string name="continue_text">Давом этиш</string>
    <string name="password_check_sms">СМС кодни тасдиқланг</string>
    <string name="retry_sms">Қайта жўнатиш</string>
    <string name="confirm">Тасдиқлаш</string>
    <string name="acceptance">Қабул қилиш</string>
    <string name="no_internet">Интернет билан уланиш мавжуд эмас</string>
    <string name="error_server">Сервер билан уланишда муаммо мавжуд илтимос сал кейинроқ яна бир бор уруниб кўринг</string>
    <string name="not_full_name">Тўлиқ исм фамилия мавжуд эмас</string>
    <string name="not_phone_number">Телефон рақам мавжуд эмас</string>
    <string name="not_password">Пароль мавжуд эмас</string>
    <string name="password_length">Пароль энг камида 6 та белгидан иборат бўлиши керак</string>
    <string name="loading">Кутинг...</string>
    <string name="new_password">Паролни янгилаш</string>
    <string name="settings">Созламалар</string>
    <string name="user_information">Фойдаланувчи малумотлари</string>
    <string name="uzb_lang">Ўзбек тили</string>
    <string name="day_theme">Кундузги ҳолат</string>
    <string name="info_application">Илова ҳақида</string>
    <string name="share_application">Иловани улашиш</string>
    <string name="money_history">Харажатлар тарихи</string>
    <string name="offerta">Оммавий офферта шартлари</string>
    <string name="info_company">Биз ҳақимизда</string>
    <string name="language_tv">Тилни танланг</string>
    <string name="uz">O\'zbek tili</string>
    <string name="ru">Рус тили</string>
    <string name="cr">Ўзбек тили</string>
    <string name="app_info">Илова ҳақида</string>
    <string name="info_application_data">Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    Blah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah BlahBlah Blah Blah Blah
    </string>
    <string name="no_data">Маълумот мавжуд эмас</string>
</resources>