<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
    android:title="@string/mainPage"
    android:icon="@drawable/ic_home_2"/>
    <item android:id="@+id/category"
    android:title="@string/category"
    android:icon="@drawable/ic_category_2"/>
    <item android:id="@+id/orders"
        android:title="@string/orders"
        android:icon="@drawable/clock"/>
    <item android:id="@+id/bankCard"
        android:title="@string/addCard"
        android:icon="@drawable/ic_card_2"/>
    <item android:id="@+id/favorite"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite"/>
    <item android:id="@+id/questions"
        android:title="@string/faqs"
        android:icon="@drawable/ic_faq"/>
    <item android:id="@+id/conditions"
        android:title="@string/conditions"
        android:icon="@drawable/ic_privacy"/>
     <item android:id="@+id/address"
    android:title="@string/address"
    android:icon="@drawable/ic_correct"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_log_out"/>
</menu>