<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bottom_sheet_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/line"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_3sdp"/>
        <RadioGroup
            android:id="@+id/group"
            android:layout_marginHorizontal="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/uz"
                android:textColor="@color/text_color"
                android:textStyle="normal"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/uz"
                android:buttonTint="@color/app_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/ru"
                android:textColor="@color/text_color"
                android:textStyle="normal"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/ru"
                android:buttonTint="@color/app_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:id="@+id/cr"
                android:textColor="@color/text_color"
                android:textStyle="normal"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/cr"
                android:buttonTint="@color/app_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/button_back"
            android:layout_marginHorizontal="@dimen/_8sdp"
            app:layout_constraintTop_toBottomOf="@id/group"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>