<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.password_reset.PasswordResetFragment">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cons_bottom"
        app:lottie_rawRes="@raw/new_password"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cons_bottom"
        android:background="@drawable/bottom_sheet_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingVertical="@dimen/_10sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.94"
            android:textColor="@color/app_background"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:text="@string/new_password"
            android:fontFamily="@font/dancingscript_bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            android:textColor="@color/text_color"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintLeft_toLeftOf="@id/text"
            app:layout_constraintRight_toRightOf="@id/text"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintWidth_percent="0.94"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:background="@drawable/edite_text_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/password_confirmation"
            android:hint="@string/password_confirm"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal"
            android:textColor="@color/text_color"
            android:fontFamily="@font/inter_medium"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintLeft_toLeftOf="@id/text"
            app:layout_constraintRight_toRightOf="@id/text"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintWidth_percent="0.94"
            android:paddingHorizontal="@dimen/_6sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:background="@drawable/edite_text_profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@id/password_confirmation"
            app:layout_constraintLeft_toLeftOf="@id/password_confirmation"
            app:layout_constraintRight_toRightOf="@id/password_confirmation"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="0dp"
            android:background="@drawable/button_back"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_height="@dimen/_33sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>