<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.create_card.CreateCardFragment">
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintVertical_bias="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <uz.gxteam.variantmarket.customLibrary.mask.MaskedEditText
        android:id="@+id/card_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/edite_text_profile"
        android:paddingHorizontal="@dimen/_6sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/text_color_app"
        android:layout_marginTop="@dimen/_13sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_constraintWidth_percent="0.93"
        android:typeface="normal"
        app:allowed_chars="0123456789"
        android:hint="0000000000000000"
        app:mask="#### #### #### ####"/>
    <uz.gxteam.variantmarket.customLibrary.mask.MaskedEditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/edite_text_profile"
        android:paddingHorizontal="@dimen/_6sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/text_color_app"
        android:layout_marginTop="@dimen/_13sdp"
        app:layout_constraintLeft_toLeftOf="@id/card_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_number"
        app:layout_constraintHorizontal_bias="0"
        android:typeface="normal"
        app:allowed_chars="0123456789"
        android:hint="00000"
        app:mask="##/##"/>
    <TextView
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintLeft_toRightOf="@id/date"
        app:layout_constraintRight_toRightOf="@id/card_number"
        app:layout_constraintBottom_toBottomOf="@id/date"
        android:layout_marginStart="@dimen/_6sdp"
        android:textStyle="normal"
        android:textColor="@color/text_color_app"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/date_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/name"
        android:hint="@string/card_user_name"
        android:inputType="text"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/text_color_app"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toLeftOf="@id/date"
        app:layout_constraintRight_toRightOf="@id/card_number"
        android:layout_marginTop="@dimen/_13sdp"
        android:background="@drawable/edite_text_profile"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/bank_name"
        android:hint="@string/bank_name"
        android:inputType="text"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/text_color_app"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="@id/date"
        app:layout_constraintRight_toRightOf="@id/card_number"
        android:layout_marginTop="@dimen/_13sdp"
        android:background="@drawable/edite_text_profile"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        app:layout_constraintTop_toBottomOf="@id/bank_name"
        app:singleLine="true"
        android:layout_marginTop="@dimen/_13sdp"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintRight_toRightOf="@id/name"
        android:layout_width="0dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:id="@+id/humo"
            app:chipIcon="@drawable/ic_humo"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/text_color_app"
            android:textStyle="normal"
            android:text="@string/humo"
            app:chipStrokeColor="@color/strocke_color"
            app:chipStrokeWidth="0.5dp"
            app:chipSurfaceColor="@color/white"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="@dimen/_5sdp"
            app:chipStartPadding="@dimen/_10sdp"
            app:chipEndPadding="@dimen/_10sdp"
            app:chipIconSize="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.chip.Chip
            android:id="@+id/uzcard"
            app:chipIcon="@drawable/ic_uzcard"
            android:textSize="@dimen/_10sdp"
            android:textColor="@color/text_color_app"
            android:textStyle="normal"
            android:text="@string/uzcard"
            app:chipStrokeColor="@color/strocke_color"
            app:chipStrokeWidth="0.5dp"
            app:chipSurfaceColor="@color/white"
            app:chipBackgroundColor="@color/white"
            app:chipCornerRadius="@dimen/_5sdp"
            app:chipStartPadding="@dimen/_10sdp"
            app:chipEndPadding="@dimen/_10sdp"
            app:chipIconSize="@dimen/_12sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.chip.ChipGroup>
    <androidx.appcompat.widget.AppCompatButton
        app:layout_constraintTop_toBottomOf="@id/chip_group"
        app:layout_constraintLeft_toLeftOf="@id/chip_group"
        app:layout_constraintRight_toRightOf="@id/chip_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.96"
        android:textColor="@color/white"
        android:textStyle="normal"
        android:textSize="@dimen/_12sdp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_medium"
        android:background="@drawable/button_back"
        android:layout_width="0dp"
        android:layout_height="@dimen/_33sdp"/>
</androidx.constraintlayout.widget.ConstraintLayout>