<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.9"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/dialog_back"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_6sdp"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_marginTop="@dimen/_5sdp"
            app:lottie_rawRes="@raw/error"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"/>
        <TextView
            android:id="@+id/text_error_data"
            android:text="@string/addCard"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:textStyle="normal"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/inter_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_btn"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/_2sdp"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:textSize="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:layout_marginEnd="@dimen/_3sdp"
                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ok_btn"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="@dimen/_10sdp"
                android:textStyle="normal"
                android:textColor="@color/white"
                android:text="@string/acceptance"
                android:layout_marginStart="@dimen/_3sdp"
                android:background="@drawable/button_back"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>